Fix z-index of position relative items

--- a/_themes/basics/sass/components/_display-grid.scss
+++ b/_themes/basics/sass/components/_display-grid.scss
@@ -11,7 +11,6 @@
     flex-direction: column;
     height: 100%;
     padding: 15px;
-    position: relative;
     text-align: center;
 
     svg {
